Fixed bug on the signup page where error message text would sometimes wrap around the inputs

--- a/public/css/login_signup.css
+++ b/public/css/login_signup.css
@@ -247,7 +247,7 @@ option.signup-select-option {
 }
 
 .show-error {
-    display: block;
+    display: inline-block;
 }
 
 .signup-dialogue {
